Fix margin between cart buttons on mobile
Make the slider carousel responsive.

--- a/src/assets/scss/components/product.scss
+++ b/src/assets/scss/components/product.scss
@@ -121,6 +121,14 @@
   flex: 0 1 auto;
   max-width: 130px;
 
+  &:first-of-type {
+    margin-right: 5px;
+  }
+
+  &:last-of-type {
+    margin-left: 5px;
+  }
+
   @media (min-width: $screen-sm) {
     max-width: 5rem;
     height: 25px;
@@ -150,7 +158,7 @@
 }
 
 .product__image--carousel {
-  width:18.4rem;
+  max-width: 18.4rem;
   margin:20px auto;
   text-align: center;
   position: relative;
@@ -162,6 +170,7 @@
   flex-wrap: wrap;
   height: 25rem;
   overflow: hidden;
+  width: 100%;
 
   .slide{
     display:flex;
