--- a/theme/assets/style.css
+++ b/theme/assets/style.css
@@ -563,6 +563,10 @@ body .eupopup-style-compact .eupopup-button {
   width: 100%;
   flex: 0 1 auto;
   max-width: 130px; }
+  .button.product__cart--btn:first-of-type {
+    margin-right: 5px; }
+  .button.product__cart--btn:last-of-type {
+    margin-left: 5px; }
   @media (min-width: 576px) {
     .button.product__cart--btn {
       max-width: 5rem;
@@ -583,7 +587,7 @@ body .eupopup-style-compact .eupopup-button {
   display: flex; }
 
 .product__image--carousel {
-  width: 18.4rem;
+  max-width: 18.4rem;
   margin: 20px auto;
   text-align: center;
   position: relative;
@@ -594,7 +598,8 @@ body .eupopup-style-compact .eupopup-button {
   flex: 1 100%;
   flex-wrap: wrap;
   height: 25rem;
-  overflow: hidden; }
+  overflow: hidden;
+  width: 100%; }
   .product__image--carousel .slide {
     display: flex;
     flex: 1 100%;
